add a variant type combination for new product.